reference/5.1/Microsoft.PowerShell.Management/Rename-ItemProperty.md
---
external help file: Microsoft.PowerShell.Commands.Management.dll-Help.xml
keywords: powershell,applet de commande
Locale: en-US
Module Name: Microsoft.PowerShell.Management
ms.date: 10/18/2018
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.management/rename-itemproperty?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Rename-ItemProperty
ms.openlocfilehash: 5cbd228f78da3bf7fa70a001391bc98f63085a73
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: fr-FR
ms.lasthandoff: 07/07/2020
ms.locfileid: "93203553"
---
# <span data-ttu-id="655d5-103">Rename-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="655d5-103">Rename-ItemProperty</span></span>

## <span data-ttu-id="655d5-104">SYNOPSIS</span><span class="sxs-lookup"><span data-stu-id="655d5-104">SYNOPSIS</span></span>
<span data-ttu-id="655d5-105">Renomme la propriété d'un élément.</span><span class="sxs-lookup"><span data-stu-id="655d5-105">Renames a property of an item.</span></span>

## <span data-ttu-id="655d5-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="655d5-106">SYNTAX</span></span>

### <span data-ttu-id="655d5-107">Chemin d’accès (par défaut)</span><span class="sxs-lookup"><span data-stu-id="655d5-107">Path (Default)</span></span>

```
Rename-ItemProperty [-Path] <String> [-Name] <String> [-NewName] <String> [-PassThru] [-Force]
 [-Filter <String>] [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf]
 [-Confirm] [-UseTransaction] [<CommonParameters>]
```

### <span data-ttu-id="655d5-108">LiteralPath</span><span class="sxs-lookup"><span data-stu-id="655d5-108">LiteralPath</span></span>

```
Rename-ItemProperty -LiteralPath <String> [-Name] <String> [-NewName] <String> [-PassThru] [-Force]
 [-Filter <String>] [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf]
 [-Confirm] [-UseTransaction] [<CommonParameters>]
```

## <span data-ttu-id="655d5-109">Description</span><span class="sxs-lookup"><span data-stu-id="655d5-109">DESCRIPTION</span></span>

<span data-ttu-id="655d5-110">L' `Rename-ItemProperty` applet de commande modifie le nom d’une propriété d’élément spécifiée.</span><span class="sxs-lookup"><span data-stu-id="655d5-110">The `Rename-ItemProperty` cmdlet changes the name of a specified item property.</span></span>
<span data-ttu-id="655d5-111">La valeur de la propriété n’est pas modifiée.</span><span class="sxs-lookup"><span data-stu-id="655d5-111">The value of the property is not changed.</span></span>
<span data-ttu-id="655d5-112">Par exemple, vous pouvez utiliser `Rename-ItemProperty` pour modifier le nom d’une entrée de registre.</span><span class="sxs-lookup"><span data-stu-id="655d5-112">For example, you can use `Rename-ItemProperty` to change the name of a registry entry.</span></span>

## <span data-ttu-id="655d5-113">EXEMPLES</span><span class="sxs-lookup"><span data-stu-id="655d5-113">EXAMPLES</span></span>

### <span data-ttu-id="655d5-114">Exemple 1 : renommer une entrée de Registre</span><span class="sxs-lookup"><span data-stu-id="655d5-114">Example 1: Rename a registry entry</span></span>

<span data-ttu-id="655d5-115">Cette commande renomme l’entrée de registre de configuration contenue dans la clé « HKEY_LOCAL_MACHINE\Software\SmpApplication » en « oldconfig »».</span><span class="sxs-lookup"><span data-stu-id="655d5-115">This command renames the config registry entry that is contained in the "HKEY_LOCAL_MACHINE\Software\SmpApplication" key to "oldconfig".</span></span>

```powershell
Rename-ItemProperty -Path HKLM:\Software\SmpApplication -Name config -NewName oldconfig
```

## <span data-ttu-id="655d5-116">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="655d5-116">PARAMETERS</span></span>

### <span data-ttu-id="655d5-117">-Credential</span><span class="sxs-lookup"><span data-stu-id="655d5-117">-Credential</span></span>

<span data-ttu-id="655d5-118">Spécifie un compte d’utilisateur qui a l’autorisation d’exécuter cette action.</span><span class="sxs-lookup"><span data-stu-id="655d5-118">Specifies a user account that has permission to perform this action.</span></span>
<span data-ttu-id="655d5-119">La valeur par défaut est l’utilisateur actuel.</span><span class="sxs-lookup"><span data-stu-id="655d5-119">The default is the current user.</span></span>

<span data-ttu-id="655d5-120">Tapez un nom d’utilisateur, tel que « User01 » ou « Domain01\User01 », ou entrez un objet **PSCredential** , tel que celui généré par l’applet de commande `Get-Credential`.</span><span class="sxs-lookup"><span data-stu-id="655d5-120">Type a user name, such as "User01" or "Domain01\User01", or enter a **PSCredential** object, such as one generated by the `Get-Credential` cmdlet.</span></span>
<span data-ttu-id="655d5-121">Si vous tapez un nom d’utilisateur, vous êtes invité à entrer un mot de passe.</span><span class="sxs-lookup"><span data-stu-id="655d5-121">If you type a user name, you are prompted for a password.</span></span>

> [!WARNING]
> <span data-ttu-id="655d5-122">Ce paramètre n’est pas pris en charge par les fournisseurs installés avec Windows PowerShell.</span><span class="sxs-lookup"><span data-stu-id="655d5-122">This parameter is not supported by any providers installed with Windows PowerShell.</span></span>

```yaml
Type: System.Management.Automation.PSCredential
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: Current user
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="655d5-123">-Exclude</span><span class="sxs-lookup"><span data-stu-id="655d5-123">-Exclude</span></span>

<span data-ttu-id="655d5-124">Spécifie les éléments que cette applet de commande omet.</span><span class="sxs-lookup"><span data-stu-id="655d5-124">Specifies items that this cmdlet omits.</span></span>
<span data-ttu-id="655d5-125">La valeur de ce paramètre qualifie le paramètre **Path** .</span><span class="sxs-lookup"><span data-stu-id="655d5-125">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="655d5-126">Entrez un élément ou un modèle de chemin d'accès, tel que « \*.txt ».</span><span class="sxs-lookup"><span data-stu-id="655d5-126">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="655d5-127">Les caractères génériques sont autorisés.</span><span class="sxs-lookup"><span data-stu-id="655d5-127">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="655d5-128">-Filter</span><span class="sxs-lookup"><span data-stu-id="655d5-128">-Filter</span></span>

<span data-ttu-id="655d5-129">Spécifie un filtre dans le format ou la langue du fournisseur.</span><span class="sxs-lookup"><span data-stu-id="655d5-129">Specifies a filter in the format or language of the provider.</span></span>
<span data-ttu-id="655d5-130">La valeur de ce paramètre qualifie le paramètre **Path** .</span><span class="sxs-lookup"><span data-stu-id="655d5-130">The value of this parameter qualifies the **Path** parameter.</span></span>

<span data-ttu-id="655d5-131">La syntaxe du filtre, notamment l’utilisation de caractères génériques, dépend du fournisseur.</span><span class="sxs-lookup"><span data-stu-id="655d5-131">The syntax of the filter, including the use of wildcard characters, depends on the provider.</span></span>
<span data-ttu-id="655d5-132">Les filtres sont plus efficaces que les autres paramètres, car le fournisseur les applique lorsque l’applet de commande obtient les objets au lieu de faire en sorte que PowerShell filtre les objets une fois qu’ils ont été récupérés.</span><span class="sxs-lookup"><span data-stu-id="655d5-132">Filters are more efficient than other parameters, because the provider applies them when the cmdlet gets the objects rather than having PowerShell filter the objects after they are retrieved.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="655d5-133">-Force</span><span class="sxs-lookup"><span data-stu-id="655d5-133">-Force</span></span>

<span data-ttu-id="655d5-134">Force l’applet de commande à renommer une propriété d’un objet qui, sinon, n’est pas accessible par l’utilisateur.</span><span class="sxs-lookup"><span data-stu-id="655d5-134">Forces the cmdlet to rename a property of an object that cannot otherwise be accessed by the user.</span></span>
<span data-ttu-id="655d5-135">L'implémentation est différente d'un fournisseur à l'autre.</span><span class="sxs-lookup"><span data-stu-id="655d5-135">Implementation varies from provider to provider.</span></span>
<span data-ttu-id="655d5-136">Pour plus d'informations, consultez [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span><span class="sxs-lookup"><span data-stu-id="655d5-136">For more information, see [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="655d5-137">-Include</span><span class="sxs-lookup"><span data-stu-id="655d5-137">-Include</span></span>

<span data-ttu-id="655d5-138">Spécifie uniquement les éléments sur lesquels l’applet de commande agit, en excluant tous les autres.</span><span class="sxs-lookup"><span data-stu-id="655d5-138">Specifies only those items upon which the cmdlet acts, excluding all others.</span></span>
<span data-ttu-id="655d5-139">La valeur de ce paramètre qualifie le paramètre **Path** .</span><span class="sxs-lookup"><span data-stu-id="655d5-139">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="655d5-140">Entrez un élément ou un modèle de chemin d'accès, tel que « \*.txt ».</span><span class="sxs-lookup"><span data-stu-id="655d5-140">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="655d5-141">Les caractères génériques sont autorisés.</span><span class="sxs-lookup"><span data-stu-id="655d5-141">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="655d5-142">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="655d5-142">-LiteralPath</span></span>

<span data-ttu-id="655d5-143">Spécifie le chemin d’accès de la propriété de l’élément.</span><span class="sxs-lookup"><span data-stu-id="655d5-143">Specifies a path of the item property.</span></span>
<span data-ttu-id="655d5-144">Contrairement au paramètre **Path** , la valeur du paramètre **LiteralPath** est utilisée exactement telle que vous la tapez.</span><span class="sxs-lookup"><span data-stu-id="655d5-144">Unlike the **Path** parameter, the value of **LiteralPath** is used exactly as it is typed.</span></span>
<span data-ttu-id="655d5-145">Aucun caractère n’est interprété en tant que caractère générique.</span><span class="sxs-lookup"><span data-stu-id="655d5-145">No characters are interpreted as wildcards.</span></span>
<span data-ttu-id="655d5-146">Si le chemin d’accès inclut des caractères d’échappement, mettez-le entre des guillemets simples.</span><span class="sxs-lookup"><span data-stu-id="655d5-146">If the path includes escape characters, enclose it in single quotation marks.</span></span>
<span data-ttu-id="655d5-147">Les guillemets simples indiquent à PowerShell qu’il n’est pas possible d’interpréter les caractères comme des séquences d’échappement.</span><span class="sxs-lookup"><span data-stu-id="655d5-147">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String
Parameter Sets: LiteralPath
Aliases: PSPath

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="655d5-148">-Name</span><span class="sxs-lookup"><span data-stu-id="655d5-148">-Name</span></span>

<span data-ttu-id="655d5-149">Spécifie le nom actuel de la propriété à renommer.</span><span class="sxs-lookup"><span data-stu-id="655d5-149">Specifies the current name of the property to rename.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases: PSProperty

Required: True
Position: 1
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="655d5-150">-NewName</span><span class="sxs-lookup"><span data-stu-id="655d5-150">-NewName</span></span>

<span data-ttu-id="655d5-151">Spécifie le nouveau nom pour la propriété.</span><span class="sxs-lookup"><span data-stu-id="655d5-151">Specifies the new name for the property.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: True
Position: 2
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="655d5-152">-PassThru</span><span class="sxs-lookup"><span data-stu-id="655d5-152">-PassThru</span></span>

<span data-ttu-id="655d5-153">Retourne un objet qui représente la propriété de l’élément.</span><span class="sxs-lookup"><span data-stu-id="655d5-153">Returns an object that represents the item property.</span></span>
<span data-ttu-id="655d5-154">Par défaut, cette applet de commande ne génère aucun résultat.</span><span class="sxs-lookup"><span data-stu-id="655d5-154">By default, this cmdlet does not generate any output.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="655d5-155">-Path</span><span class="sxs-lookup"><span data-stu-id="655d5-155">-Path</span></span>

<span data-ttu-id="655d5-156">Spécifie le chemin d’accès de l’élément à renommer.</span><span class="sxs-lookup"><span data-stu-id="655d5-156">Specifies the path of the item to rename.</span></span>

```yaml
Type: System.String
Parameter Sets: Path
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: True
```

### <span data-ttu-id="655d5-157">-UseTransaction</span><span class="sxs-lookup"><span data-stu-id="655d5-157">-UseTransaction</span></span>

<span data-ttu-id="655d5-158">Inclut la commande dans la transaction active.</span><span class="sxs-lookup"><span data-stu-id="655d5-158">Includes the command in the active transaction.</span></span>
<span data-ttu-id="655d5-159">Ce paramètre est uniquement valide au cours d’une transaction.</span><span class="sxs-lookup"><span data-stu-id="655d5-159">This parameter is valid only when a transaction is in progress.</span></span>
<span data-ttu-id="655d5-160">Pour plus d'informations, consultez [about_Transactions](../Microsoft.PowerShell.Core/About/about_Transactions.md).</span><span class="sxs-lookup"><span data-stu-id="655d5-160">For more information, see [about_Transactions](../Microsoft.PowerShell.Core/About/about_Transactions.md).</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: usetx

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="655d5-161">-Confirm</span><span class="sxs-lookup"><span data-stu-id="655d5-161">-Confirm</span></span>

<span data-ttu-id="655d5-162">Vous demande une confirmation avant d’exécuter l’applet de commande.</span><span class="sxs-lookup"><span data-stu-id="655d5-162">Prompts you for confirmation before running the cmdlet.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="655d5-163">-WhatIf</span><span class="sxs-lookup"><span data-stu-id="655d5-163">-WhatIf</span></span>

<span data-ttu-id="655d5-164">Montre ce qui se passe en cas d’exécution de l’applet de commande.</span><span class="sxs-lookup"><span data-stu-id="655d5-164">Shows what would happen if the cmdlet runs.</span></span>
<span data-ttu-id="655d5-165">L’applet de commande n’est pas exécutée.</span><span class="sxs-lookup"><span data-stu-id="655d5-165">The cmdlet is not run.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="655d5-166">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="655d5-166">CommonParameters</span></span>

<span data-ttu-id="655d5-167">Cette applet de commande prend en charge les paramètres communs : `-Debug` , `-ErrorAction` ,, `-ErrorVariable` `-InformationAction` , `-InformationVariable` , `-OutVariable` , `-OutBuffer` , `-PipelineVariable` , `-Verbose` , `-WarningAction` et `-WarningVariable` .</span><span class="sxs-lookup"><span data-stu-id="655d5-167">This cmdlet supports the common parameters: `-Debug`, `-ErrorAction`, `-ErrorVariable`, `-InformationAction`, `-InformationVariable`, `-OutVariable`, `-OutBuffer`, `-PipelineVariable`, `-Verbose`, `-WarningAction`, and `-WarningVariable`.</span></span> <span data-ttu-id="655d5-168">Pour plus d’informations, consultez [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md).</span><span class="sxs-lookup"><span data-stu-id="655d5-168">For more information, see [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md).</span></span>

## <span data-ttu-id="655d5-169">ENTRÉES</span><span class="sxs-lookup"><span data-stu-id="655d5-169">INPUTS</span></span>

### <span data-ttu-id="655d5-170">System.String</span><span class="sxs-lookup"><span data-stu-id="655d5-170">System.String</span></span>

<span data-ttu-id="655d5-171">Vous pouvez diriger une chaîne qui contient un chemin d’accès, mais pas un chemin d’accès littéral, vers cette applet de commande.</span><span class="sxs-lookup"><span data-stu-id="655d5-171">You can pipe a string that contains a path, but not a literal path, to this cmdlet.</span></span>

## <span data-ttu-id="655d5-172">SORTIES</span><span class="sxs-lookup"><span data-stu-id="655d5-172">OUTPUTS</span></span>

### <span data-ttu-id="655d5-173">Aucun, System. Management. Automation. PSCustomObject</span><span class="sxs-lookup"><span data-stu-id="655d5-173">None, System.Management.Automation.PSCustomObject</span></span>

<span data-ttu-id="655d5-174">Cette applet de commande génère un **PSCustomObject** qui représente la propriété d’élément renommée, si vous spécifiez le paramètre *PassThru* .</span><span class="sxs-lookup"><span data-stu-id="655d5-174">This cmdlet generates a **PSCustomObject** that represents the renamed item property, if you specify the *PassThru* parameter.</span></span>
<span data-ttu-id="655d5-175">Sinon, cette applet de commande ne génère aucune sortie.</span><span class="sxs-lookup"><span data-stu-id="655d5-175">Otherwise, this cmdlet does not generate any output.</span></span>

## <span data-ttu-id="655d5-176">REMARQUES</span><span class="sxs-lookup"><span data-stu-id="655d5-176">NOTES</span></span>

<span data-ttu-id="655d5-177">`Remove-ItemProperty` est conçu pour fonctionner avec les données exposées par n’importe quel fournisseur.</span><span class="sxs-lookup"><span data-stu-id="655d5-177">`Remove-ItemProperty` is designed to work with the data exposed by any provider.</span></span> <span data-ttu-id="655d5-178">Pour répertorier les fournisseurs disponibles dans votre session, tapez `Get-PSProvider` .</span><span class="sxs-lookup"><span data-stu-id="655d5-178">To list the providers available in your session, type `Get-PSProvider`.</span></span> <span data-ttu-id="655d5-179">Pour plus d'informations, consultez [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span><span class="sxs-lookup"><span data-stu-id="655d5-179">For more information, see [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span></span>

## <span data-ttu-id="655d5-180">LIENS CONNEXES</span><span class="sxs-lookup"><span data-stu-id="655d5-180">RELATED LINKS</span></span>

[<span data-ttu-id="655d5-181">Clear-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="655d5-181">Clear-ItemProperty</span></span>](Clear-ItemProperty.md)

[<span data-ttu-id="655d5-182">Copy-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="655d5-182">Copy-ItemProperty</span></span>](Copy-ItemProperty.md)

[<span data-ttu-id="655d5-183">Get-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="655d5-183">Get-ItemProperty</span></span>](Get-ItemProperty.md)

[<span data-ttu-id="655d5-184">Move-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="655d5-184">Move-ItemProperty</span></span>](Move-ItemProperty.md)

[<span data-ttu-id="655d5-185">New-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="655d5-185">New-ItemProperty</span></span>](New-ItemProperty.md)

[<span data-ttu-id="655d5-186">Remove-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="655d5-186">Remove-ItemProperty</span></span>](Remove-ItemProperty.md)

[<span data-ttu-id="655d5-187">Rename-Item</span><span class="sxs-lookup"><span data-stu-id="655d5-187">Rename-Item</span></span>](Rename-Item.md)

[<span data-ttu-id="655d5-188">Set-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="655d5-188">Set-ItemProperty</span></span>](Set-ItemProperty.md)

[<span data-ttu-id="655d5-189">about_Providers</span><span class="sxs-lookup"><span data-stu-id="655d5-189">about_Providers</span></span>](../Microsoft.PowerShell.Core/About/about_Providers.md)
